--- a/tox.ini
+++ b/tox.ini
@@ -14,16 +14,15 @@ envlist =
     clean,
     check,
     docs,
-    {py37,py38,py39,py310,pypy37,pypy38,pypy39},
+    {py38,py39,py310},
     report
 ignore_basepython_conflict = true
 
+[flake8]
+per-file-ignores = __init__.py:F401
+
 [testenv]
 basepython =
-    pypy37: {env:TOXPYTHON:pypy3.7}
-    pypy38: {env:TOXPYTHON:pypy3.8}
-    pypy39: {env:TOXPYTHON:pypy3.9}
-    py37: {env:TOXPYTHON:python3.7}
     py38: {env:TOXPYTHON:python3.8}
     py39: {env:TOXPYTHON:python3.9}
     py310: {env:TOXPYTHON:python3.10}
@@ -37,6 +36,11 @@ usedevelop = false
 deps =
     pytest
     pytest-cov
+    pytest-mock
+    jmespath
+    phonenumbers
+    unidecode
+    pyproj
 commands =
     {posargs:pytest --cov --cov-report=term-missing -vv tests}
 
